# GaiaScout

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format_code.sh  format_qml.sh
app/android/: AndroidManifest.xml  build.gradle  build.gradle.in
app/android/src/br/co/gaiascout/: CameraController.java  MainActivity.java  ShareUtils.java
app/cpp/: appstyle.h  cameracontroller.cpp  cameracontroller.h  main.cpp  mapcontroller.cpp  mapcontroller.h  projectcontroller.cpp  projectcontroller.h  shareutils.cpp  shareutils.h
app/images/: images.qrc
app/ios/: CameraHelper.mm  Info.plist  ShareUtils.mm
app/qml/: CameraView.qml  CreateProject.qml  Crosshair.qml  FeatureDetailsDialog.qml  Form.qml  FormField.qml  MapView.qml  Marker.qml  PhotoPreview.qml  ProjectItem.qml  Projects.qml  Settings.qml  SettingsItem.qml  Toolbar.qml  ToolbarButton.qml  main.qml
